@@ -3,7 +3,8 @@ from _testcapi import _test_structmembersType, \
     SHRT_MAX, SHRT_MIN, USHRT_MAX, \
     INT_MAX, INT_MIN, UINT_MAX, \
     LONG_MAX, LONG_MIN, ULONG_MAX, \
-    LLONG_MAX, LLONG_MIN, ULLONG_MAX
+    LLONG_MAX, LLONG_MIN, ULLONG_MAX, \
+    PY_SSIZE_T_MAX, PY_SSIZE_T_MIN
 
 import warnings, unittest, sys
 from test import support
@@ -17,6 +18,7 @@ ts=_test_structmembersType(False,  # T_BOOL
                           6,      # T_UINT
                           7,      # T_LONG
                           8,      # T_ULONG
+                          23,     # T_PYSSIZET
                           9.99999,# T_FLOAT
                           10.1010101010, # T_DOUBLE
                           "hi" # T_STRING_INPLACE
@@ -63,6 +65,12 @@ class ReadWriteTests(unittest.TestCase):
         ts.T_ULONG = ULONG_MAX
         self.assertEquals(ts.T_ULONG, ULONG_MAX)
 
+    def test_py_ssize_t(self):
+        ts.T_PYSSIZET = PY_SSIZE_T_MAX
+        self.assertEquals(ts.T_PYSSIZET, PY_SSIZE_T_MAX)
+        ts.T_PYSSIZET = PY_SSIZE_T_MIN
+        self.assertEquals(ts.T_PYSSIZET, PY_SSIZE_T_MIN)
+
     @unittest.skipUnless(hasattr(ts, "T_LONGLONG"), "long long not present")
     def test_longlong(self):
         ts.T_LONGLONG = LLONG_MAX
@@ -78,6 +86,24 @@ class ReadWriteTests(unittest.TestCase):
         self.assertEquals(ts.T_LONGLONG, 3)
         ts.T_ULONGLONG = 4
         self.assertEquals(ts.T_ULONGLONG, 4)
+
+    def test_bad_assignments(self):
+        integer_attributes = [
+            'T_BOOL',
+            'T_BYTE', 'T_UBYTE',
+            'T_SHORT', 'T_USHORT',
+            'T_INT', 'T_UINT',
+            'T_LONG', 'T_ULONG',
+            'T_PYSSIZET'
+            ]
+        if hasattr(ts, 'T_LONGLONG'):
+            integer_attributes.extend(['T_LONGLONG', 'T_ULONGLONG'])
+
+        # issue8014: this produced 'bad argument to internal function'
+        # internal error
+        for nonint in None, 3.2j, "full of eels", {}, []:
+            for attr in integer_attributes:
+                self.assertRaises(TypeError, setattr, ts, attr, nonint)
 
     def test_inplace_string(self):
         self.assertEquals(ts.T_STRING_INPLACE, "hi")
